# sweets

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conda-env.yml  fix_broken_sequoia154.sh  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt
.github/workflows/: test-build-push.yml
docker/: Dockerfile  build-docker-image.sh  specfile.txt
docs/: ifg-workflow-test-guide.md  ifg_workflow.ipynb  sweets-demo.ipynb
scripts/: compare_burst_alignment.py  demo_sweet.py  make_browse_slcs.sh  make_ifg_notebook.py  notebook_screenshots.py  prep_mintpy.py  ui.ipynb  web_screenshots.py
src/sweets/: __init__.py  __main__.py  _burst_alignment.py  _burst_db.py  _cdse.py  _config.py  _crossmul.py  _dolphin.py  _geocode_slcs.py  _geometry.py  _interferograms.py  _log.py  _missing_data.py  _netrc.py  _orbit.py  _orbits.py  _show_versions.py  _types.py  _unzip.py  cli.py  core.py  dem.py  download.py  form_ifg_dask.py  ifg.py  interferogram.py  plotting.py  utils.py
src/sweets/web/: README.md  __init__.py  app.py
src/sweets/web/api/: __init__.py  jobs.py  results.py  schema.py  search.py  websocket.py
src/sweets/web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/sweets/web/frontend/src/: App.tsx  api.ts  main.tsx  state.tsx  style.css  types.ts
src/sweets/web/frontend/src/components/: ConfigPanel.tsx  JobsPanel.tsx  MapView.tsx  SearchPanel.tsx
src/sweets/web/models/: __init__.py  database.py  job.py
src/sweets/web/services/: __init__.py  executor.py  log_manager.py
tests/: requirements.txt  test_burst_alignment.py  test_core.py  test_crossmul.py  test_missing_data.py  test_web.py
